dashboard-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/secure-backends: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    #kubernetes.io/ingress.allow-http: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.org/ssl-backend: "kubernetes-dashboard"


    #nginx.ingress.kubernetes.io/use-regex: "true"
    #ingress.kubernetes.io/rewrite-target: /
    #nginx.org/rewrites: "serviceName=kubernetes-dashboard rewrite=/"
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #  rewrite /dashboard/(.*) $1 break;
    #nginx.ingress.kubernetes.io/rewrite-path: /
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #  rewrite ^/dashboard/(.*)$ /$1 break;
    #  proxy_set_header Authorization "";#
spec:
  rules:
  - host: raynear.iptime.org
    http:
      paths:
      - path: /
      #- path: /dashboard
      #- path: /dashboard(/|$)(.*)
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
  tls:
  - secretName: tls-reg
    hosts:
      - raynear.iptime.org
