default-backend-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-http-backend
  namespace: ingress-nginx
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-path: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/notebook/(.*)$ /$1 break;
spec:
  rules:
  - host: raynear.iptime.org
    http:
      paths:
      - path: /
        backend:
          serviceName: default-http-backend
          servicePort: 80
  tls:
  - secretName: tls-reg
    hosts:
    - raynear.iptime.org
