jupyter-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jupyter-notebook
  namespace: jupyter
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: raynear.iptime.org
    http:
      paths:
      - path: /notebook(/|$)(.*)
        backend:
          serviceName: jupyter-notebook
          servicePort: 8888
  tls:
  - secretName: tls-reg
    hosts:
    - raynear.iptime.org
