kibana-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-kb-http
  namespace: elastic-system
  labels:
    app: kibana
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/kibana/(.*)$ /$1 break;
      proxy_set_header Authorization "";
    #nginx.ingress.kubernetes.io/secure-backends: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: raynear.iptime.org
    http:
      paths:
      - path: /kibana
        backend:
          serviceName: kibana-kb-http
          servicePort: 5601
  tls:
  - secretName: tls-reg
    hosts:
      - raynear.iptime.org
